# bloom-log-analyzer

./: CLAUDE.md  Cargo.toml  README.md
src/: analysis.rs  lib.rs  log.rs  main.rs  parser.rs  scanner.rs  ui.rs  util.rs
src/analysis/: identifiers.rs  outliers.rs  request_sizes.rs  routes.rs  timeline.rs
src/ui/: chart.rs  detail_viewer.rs  pager.rs  selectable_list.rs  sortable_table.rs  table_format.rs
