[package]
name = "analgun"
version = "0.1.0"
edition = "2021"
description = "HTTP request log analyzer"

[[bin]]
name = "analgun"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"
dialoguer = "0.11"
comfy-table = "7"
colored = "2"
anyhow = "1"
indicatif = "0.17"
minus = { version = "5", features = ["static_output"] }
crossterm = "0.29"
