[package]
name = "analgun"
version = "0.1.0"
edition = "2021"
description = "HTTP request log analyzer"

[[bin]]
name = "analgun"
path = "src/main.rs"

[dependencies]
ahash = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
comfy-table = "7"
crossterm = "0.29"
dialoguer = "0.11"
indicatif = "0.17"
memmap2 = "0.9"
once_cell = "1"
rayon = "1"
regex = "1"
