[package]
name = "bloom-log-analyzer"
version = "1.0.0"
description = "Log analysis CLI for Bloom, the REST API caching middleware. It helps you uncover patterns in your Bloom logs."
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/valeriansaliou/bloom-log-analyzer"
repository = "https://github.com/valeriansaliou/bloom-log-analyzer.git"
keywords = ["cli"]
categories = ["command-line-interface"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[[bin]]
name = "bloom-log-analyzer"
path = "src/main.rs"
doc = false

[dependencies]
ahash = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
comfy-table = "7"
crossterm = "0.29"
dialoguer = "0.11"
indicatif = "0.17"
memmap2 = "0.9"
once_cell = "1"
rayon = "1"
regex = "1"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
strip = true
